# ROV_aquascope

./: .gitignore  TODO  build.sh  launch.sh  test.py  tmp.tm  world.sh
src/devices/: CMakeLists.txt  package.xml
src/devices/models/: spot_lamp.sdf
src/devices/src/: HeadlightToggle.cpp
src/my_gz_plugins/: CMakeLists.txt  package.xml
src/my_gz_plugins/env-hooks/: my_gz_plugins.sh.in
src/my_gz_plugins/src/: BallastTankPlugin.cc  PressureSensorPlugin.cc  SpotLightPlugin.cc
src/my_robot_sim/: package.xml  setup.cfg  setup.py
src/my_robot_sim/launch/: rov.launch.py  sim.launch.py
src/my_robot_sim/models/bool/: model.config  model.sdf
src/my_robot_sim/models/rov/: model.config  model.sdf
src/my_robot_sim/my_robot_sim/: camera_streamer.py  control.py  depth_controller.py  depth_hold_node.py  gateway_server.py  joystick_controller.py  keyboard.py  mcu_gateway.py  rov_controller.py  server.py
src/my_robot_sim/my_robot_sim/sim/: microcontroller_sim.py
src/my_robot_sim/worlds/: empty.world
src/rov_dashboard/: flowchart.md  package.xml  setup.cfg  setup.py
src/rov_dashboard/config/: blocks.json  dashboard_config.json  dashboard_settings.json  layout.json  services.json
src/rov_dashboard/rov_dashboard/: dashboard_backend.py
src/rov_dashboard/rov_dashboard/api/: block_routes.py  errors.py  flowchart_routes.py  node_routes.py  runtime.py  service_routes.py
src/rov_dashboard/rov_dashboard/blocks/: base_block.py  camera_block.py  hardware_block.py  light_block.py  node_block.py  pump_block.py  sensor_block.py  thruster_block.py  topic_block.py
src/rov_dashboard/rov_dashboard/core/: config_loader.py  layout_store.py  node_handler.py  ros_interface.py
src/rov_dashboard/rov_dashboard/flowchart/: block_factory.py  block_manager.py  flowchart_manager.py
src/rov_dashboard/rov_dashboard/services/: __init__.py  node_manager.py  process_registry.py  service_manager.py
src/rov_dashboard/test/: test_flowchart_manager.py  test_node_manager.py  test_ros_interface.py
src/rov_dashboard/web/: app.js  index.html  style.css
src/rov_dashboard/web/js/: constants.js  dashboard-app.js  dom.js  utils.js
src/rov_dashboard/web/js/renderers/: block-panel.js  services-panel.js
