<?xml version="1.0"?>
<package format="3">
  <name>devices</name>
  <version>0.0.1</version>
  <description>Gazebo device plugins and models</description>

  <maintainer email="zyad11hany@gmail.com">Zyad Hany</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gz-sim</depend>
  <depend>gz-plugin</depend>
  <depend>gz-transport</depend>
  <depend>gz-msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>