<?xml version="1.0"?>
<package format="3">
  <name>my_gz_plugins</name>
  <version>0.0.1</version>
  <description>Generic Gazebo plugins package</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_gz_sim</depend>

<export>
  <build_type>ament_cmake</build_type>
  <gazebo_ros plugin_path="/home/zyadhany/ros2_ws/install/my_gz_plugins/lib"/>
</export>
</package>