<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rov_dashboard</name>
  <version>0.0.0</version>
  <description>Flowchart dashboard MVP for an ROV project.</description>
  <maintainer email="zeyad.hany2003@gmail.com">zyadhany</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>rosidl_runtime_py</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
